# RaTeX

./: CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  README.zh-CN.md  RELEASING.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release-cli.yml  release-crates.yml  release-flutter.yml  release-ios.yml
crates/ratex-cairo/src/: lib.rs
crates/ratex-ffi/src/: jni.rs  lib.rs
crates/ratex-font-loader/src/: outline_cache.rs
crates/ratex-font/src/: lib.rs  metrics.rs  symbols.rs
crates/ratex-gtk4/: Cargo.toml
crates/ratex-gtk4/examples/: adw_formula_demo.rs
crates/ratex-gtk4/src/: imp.rs  lib.rs
crates/ratex-layout/src/: engine.rs  katex_svg.rs  layout_box.rs  stacked_delim.rs  to_display.rs
crates/ratex-layout/tests/: ce_co2_cjk_glyphs.rs  layout_vs_katex.rs
crates/ratex-parser/src/: environments.rs  macro_expander.rs  parse_node.rs  parser.rs  tests.rs
crates/ratex-pdf/: Cargo.toml
crates/ratex-pdf/src/: fonts.rs  renderer.rs
crates/ratex-pdf/tests/: render_pdf_cli.rs  smoke.rs
crates/ratex-render/src/: main.rs  renderer.rs
crates/ratex-render/tests/: bench_render.rs  golden_test.rs  (+4 more)
crates/ratex-svg/: Cargo.toml
demo/android/: README.md
demo/react-native/: README.md
demo/react-native-expo/: App.tsx  app.json  package-lock.json  package.json
demo/spm-macos/: Package.swift  README.md
docs/: PROJECT_STRUCTURE.md
scripts/: install-hooks.sh  update_golden_output.sh  update_golden_prooftree.sh
tests/golden/: test_cases.txt  test_cases_prooftree.txt
tools/golden_compare/: compare_golden.py  generate_reference_prooftree.mjs
(+12 files in other folders)
